# ouster_colored_point_aligner

./: .gitignore  README.md
src/lidar_basic/: CMakeLists.txt  package.xml
src/lidar_basic/src/: process_lidar.cpp
